added dqn results

--- a/.gitignore
+++ b/.gitignore
@@ -236,5 +236,7 @@ reinforce_results/*
 
 rl2024/exercise3/*.pt
 rl2024/exercise3/*.pkl
+rl2024/exercise3/dqn_results/*.pt
+rl2024/exercise3/dqn_results/*.pkl
 
 *.pt
